# supersaas-auth-connector

./: .dockerignore  .gitignore  404.html  AGENTS.md  Dockerfile  README.md  USERS.md  catalog-info.yaml  gen_ref_pages.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: release.yaml  schedule.yaml  semantic-release.yaml  test.yaml
architecture/: index.html
configuration/: index.html
contributing/: index.html
development/: index.html
docs/: architecture.md  configuration.md  contributing.md  development.md  getting-started.md  llms.txt
docs/css/: style.css
docs/overrides/: home.html
docs/reference/: index.md
getting-started/: index.html
overrides/: home.html
reference/: index.html
sac/: app.py  settings.py
search/: search_index.json
tests/: test_app.py
