[project]
name = "supersaas-auth-connector"
version = "0.0.0"
description = "Creates users in SuperSaaS before forwarding them."
repository = "https://github.com/radiorabe/supersaas-auth-connector"
license = {text = "AGPL-3"}
readme = "README.md"

requires-python = ">=3.12,<4"
dependencies = [
    "itsdangerous (>=2.2.0,<3.0.0)",
    "python-keycloak (>=5.8.1,<6.0.0)",
    "starlette (>=0.48.0,<0.49.0)",
    "starlette-context (>=0.4.0,<0.5.0)",
    "supersaas-api-client (>=2.0.1,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
]

[tool.poetry]
packages = [
    { include = "sac" },
    { include = "sac/py.typed" },
]


[tool.poetry.scripts]
supersaas-auth-connector = 'sac.app:main'

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.0"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-mypy = "^1.0.1"
pytest-random-order = "^1.2.0"
pytest-ruff = "^0.5"
requests-mock = "^1.12.1"
ruff = "^0.14.7"

[tool.pytest.ini_options]
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=sac --cov-fail-under=100 --ruff --mypy --ignore docs/"
filterwarnings = ["ignore::UserWarning:starlette"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
